--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@ author_profile: false
 <script>
     new WOW().init();
 </script>
-<iframe src="https://links.collect.chat/5b5c25d8d8b550d4a6419ef9" width="100%" height="600" frameBorder="0"></iframe>
+<script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5b5c25d8d8b550d4a6419ef9";r("https://collectcdn.com/launcher.js");})(window,document);</script>
