Added structure data
Structure data test

--- a/index.html
+++ b/index.html
@@ -21,4 +21,43 @@ author_profile: false
 <script>
     new WOW().init();
 </script>
+<script type="application/ld+json">
+{
+	"@context": "https://schema.org",
+	"@type": "Person",
+	"address": {
+		"@type": "PostalAddress",
+		"addressLocality": "Ahmedabad",
+		"addressRegion": "IN",
+		"postalCode": "380058",
+		"streetAddress": "South bopal"
+	},
+	"email": "dipen27891@gmail.com",
+	"image": "https://dipen-dedania.github.io/images/profile.jpg",
+	"jobTitle": "Tech Lead",
+	"name": "Dipen Dedania",
+	"description": "Technologist, Software Developer, Tech enthusiast, Coder",
+	"alumniOf": "Srinivas Institute of Technology",
+	"birthPlace": "Junagadh, IN",
+	"birthDate": "1991-08-27",
+	"gender": "male",
+	"memberOf": "Zuru Tech",
+	"nationality": "Indian",
+	"worksFor": [{
+		"@type": "Organization",
+		"name": "ZURU Tech",
+		"sameAs": [
+			"https://zuru.tech/"
+		]
+	}],
+	"url": "https://dipen-dedania.github.io/",
+	"sameAs": [
+		"https://www.linkedin.com/in/dipendedania",
+		"https://www.facebook.com/dipen.dedania.7",
+		"https://twitter.com/i_m_vampire_",
+		"https://github.com/dipen-dedania",
+		"https://stackoverflow.com/users/1934452/dipen-dedania"
+	]
+}
+</script>
 <script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5b5c25d8d8b550d4a6419ef9";r("https://collectcdn.com/launcher.js");})(window,document);</script>
